@@ -5,6 +5,9 @@ Release 1.12 - Current Development
 
   * Fix regression with spacing in PPT via Andreas Beeker (TIKA-1777).
 
+  * Tika Facade parse methods for Path and File added which take a
+    Metadata object, to mirror the existing InputStream one (GitHub-60)
+
 
 Release 1.11 - 10/18/2015
 
